; ModuleID = '/home/carl/AnghaBench/systemd/src/udev/extr_udev-builtin-usb_id.c_set_usb_iftype.c'
source_filename = "/home/carl/AnghaBench/systemd/src/udev/extr_udev-builtin-usb_id.c_set_usb_iftype.c"
target datalayout = "e-m:e-p270:32:32-p271:32:32-p272:64:64-i64:64-f80:128-n8:16:32:64-S128"
target triple = "x86_64-unknown-linux-gnu"

@.str = private unnamed_addr constant [8 x i8] c"generic\00", align 1
@.str.1 = private unnamed_addr constant [6 x i8] c"audio\00", align 1
@.str.2 = private unnamed_addr constant [4 x i8] c"hid\00", align 1
@.str.3 = private unnamed_addr constant [6 x i8] c"media\00", align 1
@.str.4 = private unnamed_addr constant [8 x i8] c"printer\00", align 1
@.str.5 = private unnamed_addr constant [8 x i8] c"storage\00", align 1
@.str.6 = private unnamed_addr constant [4 x i8] c"hub\00", align 1
@.str.7 = private unnamed_addr constant [6 x i8] c"video\00", align 1
@llvm.used = appending global [1 x i8*] [i8* bitcast (void (i8*, i32, i64)* @set_usb_iftype to i8*)], section "llvm.metadata"

; Function Attrs: noinline nounwind optnone uwtable
define internal void @set_usb_iftype(i8* %0, i32 %1, i64 %2) #0 {
  %4 = alloca i8*, align 8
  %5 = alloca i32, align 4
  %6 = alloca i64, align 8
  %7 = alloca i8*, align 8
  store i8* %0, i8** %4, align 8
  store i32 %1, i32* %5, align 4
  store i64 %2, i64* %6, align 8
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str, i64 0, i64 0), i8** %7, align 8
  %8 = load i32, i32* %5, align 4
  switch i32 %8, label %25 [
    i32 1, label %9
    i32 2, label %10
    i32 3, label %11
    i32 5, label %12
    i32 6, label %13
    i32 7, label %14
    i32 8, label %15
    i32 9, label %16
    i32 10, label %17
    i32 11, label %18
    i32 13, label %19
    i32 14, label %20
    i32 220, label %21
    i32 224, label %22
    i32 254, label %23
    i32 255, label %24
  ]

9:                                                ; preds = %3
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.1, i64 0, i64 0), i8** %7, align 8
  br label %26

10:                                               ; preds = %3
  br label %26

11:                                               ; preds = %3
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.2, i64 0, i64 0), i8** %7, align 8
  br label %26

12:                                               ; preds = %3
  br label %26

13:                                               ; preds = %3
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.3, i64 0, i64 0), i8** %7, align 8
  br label %26

14:                                               ; preds = %3
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.4, i64 0, i64 0), i8** %7, align 8
  br label %26

15:                                               ; preds = %3
  store i8* getelementptr inbounds ([8 x i8], [8 x i8]* @.str.5, i64 0, i64 0), i8** %7, align 8
  br label %26

16:                                               ; preds = %3
  store i8* getelementptr inbounds ([4 x i8], [4 x i8]* @.str.6, i64 0, i64 0), i8** %7, align 8
  br label %26

17:                                               ; preds = %3
  br label %26

18:                                               ; preds = %3
  br label %26

19:                                               ; preds = %3
  br label %26

20:                                               ; preds = %3
  store i8* getelementptr inbounds ([6 x i8], [6 x i8]* @.str.7, i64 0, i64 0), i8** %7, align 8
  br label %26

21:                                               ; preds = %3
  br label %26

22:                                               ; preds = %3
  br label %26

23:                                               ; preds = %3
  br label %26

24:                                               ; preds = %3
  br label %26

25:                                               ; preds = %3
  br label %26

26:                                               ; preds = %25, %24, %23, %22, %21, %20, %19, %18, %17, %16, %15, %14, %13, %12, %11, %10, %9
  %27 = load i8*, i8** %4, align 8
  %28 = load i8*, i8** %7, align 8
  %29 = load i64, i64* %6, align 8
  %30 = call i32 @strncpy(i8* %27, i8* %28, i64 %29)
  %31 = load i8*, i8** %4, align 8
  %32 = load i64, i64* %6, align 8
  %33 = sub i64 %32, 1
  %34 = getelementptr inbounds i8, i8* %31, i64 %33
  store i8 0, i8* %34, align 1
  ret void
}

declare dso_local i32 @strncpy(i8*, i8*, i64) #1


!llvm.module.flags = !{!0}
!llvm.ident = !{!1}

!0 = !{i32 1, !"wchar_size", i32 4}
!1 = !{!"clang version 10.0.1 (https://github.com/wsmoses/llvm-project-tok c8e5003577614e72d6d18a216e6a09771e1fcce4)"}
